group same class
